fixed proflile button drop down by adding a z-index to the parent which is nav bar. changed the spot info to show the price and night next to each other.

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -14,13 +14,14 @@ ul {
     display: inline;
     margin-right: 10px;
   } */
+   
 
-  .profile-dropdown {
+  /* .profile-dropdown {
     position: absolute;
     background-color: whitesmoke;
     padding: 5px;
 
-  }
+  } */
 
   .profile-dropdown.hidden {
     display: none;
