--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -2,8 +2,10 @@
     color: #333333;
 }
 
+
+
   .profile-dropdown {
-    position: relative;
+    position: absolute;
     right: 0;
     top: 60px;
     background-color: #333333;
@@ -13,7 +15,7 @@
     list-style-type: none;
     width: 150px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+    z-index: 4;
   }
 
   .profile-dropdown li {
