--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,8 +2,8 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #f2f1ef;
     color: #253659;
-    min-width: 700px;
-    max-width: 1200px;
+    /* min-width: 700px;
+    max-width: 1200px; */
     display: grid;
 }
 
@@ -14,7 +14,7 @@ nav{
     background-color: #a9d9d0;
     position: relative;
     padding: 5px;
-
+   z-index: 1000;
 }
 
 .logo {
@@ -57,10 +57,10 @@ h2{
     font-size: 32px;
     color: #333333;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    /* position: fixed;
-    top: 25px;
-    right: 20px; */
-
+    position: relative;
+    /* top: 25px;
+    right: 20px; */ 
+z-index: 100
 
   }
 
@@ -73,6 +73,7 @@ h2{
     grid-template-rows: auto;
     grid-template-areas: ".spot-card" ".spot-card" ".spot-card" ".spot-card";
     gap: 20px;
+
 }
 
 .spot-card {
@@ -86,23 +87,26 @@ h2{
     height: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px;
-    overflow: visible;
-    z-index: -1;
+    overflow: visible;    
+    
   }
 
   .image-wrapper {
     position: relative;
     display: inline-block;
-    z-index: 1;
+    z-index: 0;
   }
 
   .spot-image {
     width: 100%;
     height: 150px;
     /* object-fit: cover; */
+    position: relative;
     border-radius: 8px;
     align-self: center;
     transition: transform 0.2s;
+    z-index:-1;
+    
   }
 
   .spot-image:hover {
@@ -119,11 +123,12 @@ h2{
     padding: 8px;
     border-radius: 4px;
     white-space: nowrap;
-    z-index: 10;
+    /* z-index: 10; */
     pointer-events: none; /* Prevent tooltip from interfering with hover */
     opacity: 0; /* Hide initially */
     transition: opacity 0.2s; /* Smooth fade-in effect */
   }
+  
 
 .spot-title{
     color: #027373
@@ -140,7 +145,7 @@ button{
     background-color: #027373;
     color: #f2f1ef;
     border-radius: 100px;
-    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px;
+    /* box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px; */
     padding: 7px 20px;
     text-align: center;
 
